# MyCS336

./: .gitignore  LESSONS_LEARNED.md  README.md  UPLOAD_GUIDE.md  setup_git.bat
1/assignment1-basics-main/: LESSONS_LEARNED.md
1/assignment1-basics-main/cs336_basics/: data.py  model.py  nn_utils.py  optimizer.py  serialization.py  tokenizer.py
1/assignment1-basics-main/tests/: adapters.py  test_tokenizer.py
2/assignment2-systems-main/: LESSONS_LEARNED.md  pyproject.toml  run_tests.bat  run_tests.sh
2/assignment2-systems-main/cs336-basics/: pyproject.toml
2/assignment2-systems-main/cs336_systems/: __init__.py  ddp.py  flash_attention.py  sharded_optimizer.py
2/assignment2-systems-main/tests/: adapters.py  common.py  conftest.py
3/assignment3-scaling-main/: .gitignore  CHANGELOG.md  LESSONS_LEARNED.md  USAGE.md  pyproject.toml  run_analysis.py
3/assignment3-scaling-main/cs336_scaling/: __init__.py  chinchilla_isoflops.py  scaling_api.py  scaling_experiment.py  utils.py
3/assignment3-scaling-main/tests/: __init__.py  test_api.py  test_chinchilla.py  test_experiment.py
4/assignment4-data-main/: LESSONS_LEARNED.md  pyproject.toml
4/assignment4-data-main/cs336_data/: __init__.py  deduplication.py  extract.py  langid.py  pii.py  quality.py  toxicity.py
4/assignment4-data-main/tests/: adapters.py
5/assignment5-alignment-main/: LESSONS_LEARNED.md  pyproject.toml
5/assignment5-alignment-main/tests/: adapters.py  test_dpo.py
